# oeis-code

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: docs.yml  lint.yml  publish.yml  tests.yml
docs/: index.md  usage.md
docs/reference/: core.md  registry.md  utils.md
oeis_code/: __init__.py  core.py  registry.py
oeis_code/backends/: pari.py  python.py
oeis_code/sequences/: A000040.py  A000045.py  A016993.py  A017053.py  A066096.py  __init__.py
oeis_code/utils/: math.py
reference/core/: index.html
reference/registry/: index.html
reference/utils/: index.html
search/: search_index.json
src/oeis_code/: __init__.py  core.py  registry.py
src/oeis_code/backends/: pari.py  python.py
src/oeis_code/sequences/: A000040.py  A000045.py  A000120.py  A016993.py  A017053.py  A066096.py  A109261.py  __init__.py
src/oeis_code/utils/: __init__.py  math.py
tests/: test_basic.py  test_pari.py
usage/: index.html
