[build-system]
requires = [
    "setuptools>=69",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "oeis-code"
dynamic = ["version"]
authors = [
    { name = "Enrique Pérez Herrero", email = "energycode.org@gmail.com" },
]
description = "Mini OEIS in Python with PARI/GP support"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = []

[project.optional-dependencies]
pari = ["cypari2>=2.1.4,<2.3"]
test = [
    "pytest>=7",
    "pytest-cov>=4"
]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.6",
    "build>=1.2",
    "twine>=5.1",
    "pre-commit>=3.7"
]
docs = [
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.26"
]

[project.urls]
Homepage = "https://github.com/oeistools/oeis-code"
"Bug Tracker" = "https://github.com/oeistools/oeis-code/issues"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = { attr = "oeis_code.__version__" }

[tool.setuptools.package-data]
"*" = ["py.typed"]

# ✅ FIX: pytest config moved here
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = [
    "-ra",
    "-q",
    "--cov=oeis_code",
    "--cov-report=xml",
    "--cov-report=term"
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B"]
ignore = ["N999"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"